add gulp task to run server using brower-sync

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "description": "A application using angular, node, gulp",
   "repository": "https://github.com/lieaqnes/WhichStar",
   "devDependencies": {
+    "browser-sync": "^2.3.1",
     "gulp": "^3.8.11",
     "gulp-load-plugins": "^0.8.1",
     "http-server": "^0.6.1"
