--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,13 @@
   "description": "A application using angular, node, gulp",
   "repository": "https://github.com/lieaqnes/WhichStar",
   "devDependencies": {
+    "autoprefixer-core": "^5.1.7",
     "browser-sync": "^2.3.1",
     "gulp": "^3.8.11",
     "gulp-load-plugins": "^0.8.1",
+    "gulp-postcss": "^4.0.3",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
     "http-server": "^0.6.1"
   },
   "scripts": {
