--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,17 @@
   "devDependencies": {
     "autoprefixer-core": "^5.1.7",
     "browser-sync": "^2.3.1",
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-csso": "^1.0.0",
+    "gulp-if": "^1.2.5",
     "gulp-load-plugins": "^0.8.1",
+    "gulp-minify-html": "^1.0.1",
     "gulp-postcss": "^4.0.3",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^1.1.1",
     "http-server": "^0.6.1"
   },
   "scripts": {
