--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.8.11",
     "gulp-csso": "^1.0.0",
     "gulp-if": "^1.2.5",
+    "gulp-jshint": "^1.9.4",
     "gulp-load-plugins": "^0.8.1",
     "gulp-minify-html": "^1.0.1",
     "gulp-postcss": "^4.0.3",
