--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "gulp-minify-html": "^1.0.1",
     "gulp-postcss": "^4.0.3",
     "gulp-sass": "^1.3.3",
+    "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
