--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,7 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
+    "gulp-util": "^3.0.4",
     "http-server": "^0.6.1"
-  },
-  "scripts": {
-    "start": "http-server -a 0.0.0.0 -p 8000"
   }
 }
